--- a/utility/stdBase/CMakeLists.txt
+++ b/utility/stdBase/CMakeLists.txt
@@ -1,9 +1,9 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
+cmake_minimum_required(VERSION 3.0)
 
-SET (CMAKE_CXX_STANDARD 20)
+set (CMAKE_CXX_STANDARD 20)
 
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-ADD_SUBDIRECTORY(graph)
+
 
 
